fix gap at bottom of locating screen on some android phones. Fixes #56

--- a/src/css/fms.css
+++ b/src/css/fms.css
@@ -442,7 +442,7 @@
         top: 0;
         left: 0;
         right: 0;
-        bottom: 0;
+        bottom: -2px;
         z-index: 3010;
         text-align: center;
         background: #F6BE41;
